[package]
name = "generator"
version = "0.1.0"
authors = ["Maik Klein <maikklein@googlemail.com>"]
edition = "2021"

[dependencies]
heck = "0.4"
itertools = "0.10"
once_cell = "1.7"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.4"
vulkan-parse = { git = "https://github.com/jdtatz/vulkan-parse.git" }
